--- a/korea_polygon.html
+++ b/korea_polygon.html
@@ -1,9 +1,12 @@
+<!-- 정현석 앱 키 a9f11824227fa73885a5a969e86a34db -->
+
+
 <!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8">
-    <title>다각형에 이벤트 등록123하기1</title>
+    <title>전체지도 (클릭가능)</title>
 
 </head>
 
@@ -16,7 +19,7 @@
     <script>
         var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
             mapOption = {
-                center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+                center: new kakao.maps.LatLng(36.59518931, 127.2843763), // 지도의 중심좌표
                 level: 13 // 지도의 확대 레벨  
             };
         var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
@@ -27,63 +30,50 @@
         }
 
 
-            $.getJSON("korea.geojson", function (geojson) {
-                var data = geojson.features;
-                var name = '';            //행정구 명
-                var code = '';
+        $.getJSON("korea_map/final_korea_shape.json", function (geojson) {
+            var data = geojson.features;
+            var name = '';            //행정구 명
+            var code = '';
+            $.each(data, function (index, val) {
+                name = val.properties.CTP_KOR_NM;
+                code = val.properties.CTPRVN_CD;
 
-                $.each(data, function (index, val) {
-                    name = val.properties.CTP_KOR_NM;
-                    code = val.properties.CTPRVN_CD;
+                if (val.geometry.type == "MultiPolygon") {
+                    displayArea(name, code, val.geometry.coordinates, true);
 
-                    if (val.geometry.type == "MultiPolygon") {
-                        displayArea(name, code, val.geometry.coordinates, true);
+                }
+                else {
+                    displayArea(name, code, val.geometry.coordinates, false);
 
-                    }
-                    else {
-                        displayArea(name, code, val.geometry.coordinates, false);
-
-                    }
-                });
+                }
             });
-            $.getJSON("Busan_JeonBuk.geojson", function (geojson) {
-                var data = geojson.features;
-                var name = '';            //행정구 명
-                var code = '';
+        });
 
-                $.each(data, function (index, val) {
-                    name = val.properties.CTP_KOR_NM;
-                    code = val.properties.CTPRVN_CD;
 
-                    if (val.geometry.type == "MultiPolygon") {
-                        displayArea(name, code, val.geometry.coordinates, true);
 
-                    }
-                    else {
-                        displayArea(name, code, val.geometry.coordinates, false);
 
-                    }
-                });
-            });
-            $.getJSON("JeonBuk.geojson", function (geojson) {
-                var data = geojson.features;
-                var name = '';            //행정구 명
-                var code = '';
 
-                $.each(data, function (index, val) {
-                    name = val.properties.CTP_KOR_NM;
-                    code = val.properties.CTPRVN_CD;
 
-                    if (val.geometry.type == "MultiPolygon") {
-                        displayArea(name, code, val.geometry.coordinates, true);
 
-                    }
-                    else {
-                        displayArea(name, code, val.geometry.coordinates, false);
 
-                    }
-                });
-            });
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
         function makePolygon(coordinates) {
             var polygonPath = [];
@@ -141,45 +131,86 @@
                 polygon.setMap(map);
             }
 
-           
+
+
+
+            // 다각형에 마우스오버 이벤트가 발생했을 때 변경할 채우기 옵션입니다
+            var mouseoverOption = {
+                fillColor: '#EFFFED', // 채우기 색깔입니다
+                fillOpacity: 0.8 // 채우기 불투명도 입니다        
+            };
+
+            // 다각형에 마우스아웃 이벤트가 발생했을 때 변경할 채우기 옵션입니다
+            var mouseoutOption = {
+                fillColor: '#A2FF99', // 채우기 색깔입니다 
+                fillOpacity: 0.7 // 채우기 불투명도 입니다        
+            };
+
+            // 다각형에 마우스오버 이벤트를 등록합니다
+            kakao.maps.event.addListener(polygon, 'mouseover', function () {
+
+                // 다각형의 채우기 옵션을 변경합니다
+                polygon.setOptions(mouseoverOption);
+
+            });
+
+            kakao.maps.event.addListener(polygon, 'click', function () {
+
+                // 다각형의 채우기 옵션을 변경합니다
+                polygon.setOptions(mouseoutOption);
+            });
+
+            // 다각형에 마우스다운 이벤트를 등록합니다
+            var downCount = 0;
+            kakao.maps.event.addListener(polygon, 'click', function () {
+                location.href = "http://blog.naver.com/" + name;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            });
         }
-        /*
-        // 다각형에 마우스오버 이벤트가 발생했을 때 변경할 채우기 옵션입니다
-        var mouseoverOption = {
-            fillColor: '#EFFFED', // 채우기 색깔입니다
-            fillOpacity: 0.8 // 채우기 불투명도 입니다        
-        };
-
-        // 다각형에 마우스아웃 이벤트가 발생했을 때 변경할 채우기 옵션입니다
-        var mouseoutOption = {
-            fillColor: '#A2FF99', // 채우기 색깔입니다 
-            fillOpacity: 0.7 // 채우기 불투명도 입니다        
-        };
-
-        // 다각형에 마우스오버 이벤트를 등록합니다
-        kakao.maps.event.addListener(polygon, 'mouseover', function () {
-
-            // 다각형의 채우기 옵션을 변경합니다
-            polygon.setOptions(mouseoverOption);
-
-        });
-
-        kakao.maps.event.addListener(polygon, 'mouseout', function () {
-
-            // 다각형의 채우기 옵션을 변경합니다
-            polygon.setOptions(mouseoutOption);
-
-        });
-
-        // 다각형에 마우스다운 이벤트를 등록합니다
-        var downCount = 0;
-        kakao.maps.event.addListener(polygon, 'mousedown', function () {
-            console.log(event);
-            var resultDiv = document.getElementById('result');
-            resultDiv.innerHTML = '다각형에 mousedown 이벤트가 발생했습니다!' + (++downCount);
-        });
-        */
     </script>
+
 </body>
 
 </html>
