--- a/korea_polygon.html
+++ b/korea_polygon.html
@@ -160,12 +160,12 @@
                 polygon.setOptions(mouseoutOption);
             });
 
-            // 다각형에 마우스다운 이벤트를 등록합니다
+            // 다각형에 클릭 이벤트를 등록합니다
             var downCount = 0;
             kakao.maps.event.addListener(polygon, 'click', function () {
                 location.href = "http://blog.naver.com/" + name;
 
-
+               
 
 
 
