--- a/imageMarker.html
+++ b/imageMarker.html
@@ -54,7 +54,7 @@
             background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')
         }
     </style>
-    
+
 </head>
 
 <body>
@@ -70,31 +70,38 @@
             };
 
         var map = new kakao.maps.Map(mapContainer, mapOption);
+        $.ajax({
+            url: 'final_PublicFacility (2).json',
+            type: 'GET',
+            dataType: 'json',
+            error: function () {
+                alert('error!')
+            },
+            success: function (json) {
+                var data = json.publicfacility;
+                var name = '';            //행정구 명
+                var lng = '';
+                var type = '';
+                var markerImages = [];
+                var markerPositions = [];
+                $.each(data, function (index, data) {
+                    name = data.Location_nm;
+                    lat = data.Lat;
+                    lng = data.Lng;
+                    type = data.Facility_Type;
+                    var imageSrc = 'mark/' + type + '.png', // 마커이미지의 주소입니다    
+                        imageSize = new kakao.maps.Size(64, 69), // 마커이미지의 크기입니다
+                        imageOption = { offset: new kakao.maps.Point(27, 69) }; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
+                    // 마커의 이미지정보를 가지고 있는 마커이미지를 생성합니다
+                    var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize, imageOption),
+                        markerPosition = new kakao.maps.LatLng(lat, lng); // 마커가 표시될 위치입니다
 
-        $.getJSON("final_PublicFacility (2).json", function (json) {
-            var data = json.publicfacility;
-            var name = '';            //행정구 명
-            var lng = '';
-            var type = '';
-            var markerImages = [];
-            var markerPositions = [];
-            $.each(data, function (index, data) {
-                name = data.Location_nm;
-                lat = data.Lat;
-                lng = data.Lng;
-                type = data.Facility_Type;
-                var imageSrc = 'mark/' + type + '.png', // 마커이미지의 주소입니다    
-                    imageSize = new kakao.maps.Size(64, 69), // 마커이미지의 크기입니다
-                    imageOption = { offset: new kakao.maps.Point(27, 69) }; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
-                // 마커의 이미지정보를 가지고 있는 마커이미지를 생성합니다
-                var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize, imageOption),
-                    markerPosition = new kakao.maps.LatLng(lat, lng); // 마커가 표시될 위치입니다
+                    markerImages.push(markerImage);
+                    markerPositions.push(markerPosition);
+                });
 
-                markerImages.push(markerImage);
-                markerPositions.push(markerPosition);
-            });
-            
-            displaymarker(markerPositions, markerImages);
+                displaymarker(markerPositions, markerImages);
+            }
         });
         // 마커를 생성합니다
         function displaymarker(loc, img) {
