--- a/imageMarker.html
+++ b/imageMarker.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>이미지 마커와 커스텀 오버레이</title>
+    <title>마커만</title>
     <!---->
     <style>
         .customoverlay {
@@ -121,7 +121,7 @@
 
 
 
-        /*
+        
         // 커스텀 오버레이에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
         var content = '<div class="customoverlay">' +
             '  <a href="https://map.kakao.com/link/map/11394059" target="_blank">' +
@@ -140,7 +140,7 @@
             yAnchor: 1
         });
 
-        */
+        
     </script>
 </body>
 
